--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,34 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
+header {
+    background-color: #1F2937;
+    height: 500px;
+    
+}
 .header-top {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header-links {
     display: flex;
+    gap: 16px;
 }
 
+.header-bot {
+    
+    display: flex;
+}
+
+.header-image {
+    background-color: grey;
+    width: 700px;
+}
 ul {
     list-style-type: none;
     padding: 0px;
@@ -20,4 +38,32 @@ ul {
 
 a {
     text-decoration: none;
+}
+
+.hero-main-text {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
+
+.hero-secondary-text, a {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+h4 {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+button {
+    background-color: #3882F6;
+    border: none;
+    padding: 8px 32px;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 8px;
 }
