--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,9 @@ nav {
 }
 
 .header-image {
-    height: 300px;
-    width: 400px;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
 }
 
 .header-text-button {
@@ -50,6 +51,7 @@ nav {
 .hero-secondary-text, a {
     font-size: 18px;
     color: #E5E7EB;
+    margin-bottom: 2em;
 }
 
 .left {
