--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,6 @@
 * {
     margin: 0px;
 }
-body {
-    background-color: red;
-}
 
 /*Header & Hero*/
 header {
@@ -30,14 +27,53 @@ nav {
     justify-content: space-between;
 }
 
+
 .header-image {
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
+    height: 300px;
+    width: 300px;
+    border-radius: 32px;
 }
 
 .header-text-button {
     width: 500px;
+}
+
+/*content and Icons*/
+.content {
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 50px;
+    padding: 50px;
+}
+
+.small-img {
+    height: 200px;
+    width: 200px;
+    border: 7px solid;
+    border-color: lightblue;
+    border-radius: 32px;
+}
+
+.img-text {
+    height: 200px;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content-text {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.icons-text {
+    display: flex;
+    gap: 7em;
 }
 
 
